[metadata]
name = ewx url shortener
description = Web app to shorten urls
author = Rodwan Bakkar
author_email = rodwan.bakkar@gmail.com
url = https://github.com/Rodwan-Bakkar/ewx_url_shortener.git
keywords = python, flask, url shortening
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    Flask==1.1.2
    redis==3.5.3
    pytest==6.2.2

test_suite = tests

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    ewx_url_short = ewx_url_shortener.app:main